# WaveMood

./: Makefile  README.md  WaveMood.py  env.py  main.py  pyproject.toml
components/emailMKT/: Card.py  __init__.py
components/sections/: TopBar.py  __init__.py
enums/: Locale.py  Model.py  Theme.py  TopBarMode.py  __init__.py
res/: AppTheme.py  __init__.py
res/locale/: enUS.json
res/nlm/: emotiondetector_mlp_model.h5  emotiondetectornlw_scaler.pkl  knn_emotion_model.pkl
services/: BusinessCollectorService.py  GMapService.py  __init__.py
setup/: InstallerConfig.reg  build.cmd  debug.cmd  installer.iss
tests/: main.ipynb  my version.py  train.ipynb
views/: HomeView.py  __init__.py
vvecon/: __main__.py
vvecon/doc/: README.md  api-controller.md  core-concepts.md  database.md  env.md  examples-mkt.md  getting-started.md  logging.md  reference.md  theming-icons-ui.md  threading-signals.md  widgets.md
vvecon/doc/reference/: api.md  core.md  db.md  enums.md  env.md  exceptions.md  logger.md  models.md  res.md  signals.md  styles.md  thread.md  util.md
vvecon/doc/widgets/: button.md  calendar.md  card.md  index.md  inputfield.md  label.md  layout.md  spacing.md  table-cells.md  table.md  toast.md
vvecon/qt/: __version__.py
vvecon/qt/api/: AuthConfig.py  Controller.py  __init__.py
vvecon/qt/core/: View.py  Window.py  __init__.py
vvecon/qt/db/: Database.py
vvecon/qt/enums/: EnvMode.py  FontWeight.py  InputType.py  Method.py  SizeType.py  __init__.py
vvecon/qt/env/: Env.py  EnvManager.py  __init__.py
vvecon/qt/exceptions/: ParseError.py  (+1 more)
(+86 files in other folders)
