[project]
name = "wavemood"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=45.0.6",
    "dotenv>=0.9.9",
    "gradio>=5.46.0",
    "icecream>=2.1.7",
    "keras>=3.11.3",
    "librosa>=0.11.0",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "pip>=25.2",
    "pyqt6>=6.9.1",
    "pyqtgraph>=0.13.7",
    "pytz>=2025.2",
    "requests>=2.32.4",
    "seaborn>=0.13.2",
    "sounddevice>=0.5.2",
    "sqlalchemy>=2.0.43",
    "tensorflow>=2.20.0",
    "tf-keras>=2.20.1",
]
